Split up mods into separate modules and add instant teleporter and teleporter esp

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -58,6 +58,7 @@ file(GLOB_RECURSE HOOK_SOURCES ${SRC_DIR}/hooks/*.cpp)
 file(GLOB_RECURSE UTILS_SOURCES ${SRC_DIR}/utils/*.cpp)
 file(GLOB_RECURSE MENU_SOURCES ${SRC_DIR}/menu/*.cpp)
 file(GLOB_RECURSE FONT_SOURCES ${SRC_DIR}/fonts/*.cpp)
+file(GLOB_RECURSE MODULE_SOURCES ${SRC_DIR}/modules/*.cpp)
 
 # DLL
 add_library(RoR2ModDLL SHARED
@@ -71,6 +72,7 @@ add_library(RoR2ModDLL SHARED
     ${IMGUI_SOURCES}
     ${IMGUI_BACKEND_SOURCES}
     ${FONT_SOURCES}
+    ${MODULE_SOURCES}
 )
 
 target_link_libraries(RoR2ModDLL PRIVATE
@@ -89,8 +91,8 @@ set_target_properties(RoR2ModDLL PROPERTIES
 )
 
 # Keep Windows subsystem but add debug symbols and definitions
-set_target_properties(RoR2ModDLL PROPERTIES 
-    LINK_FLAGS "-Wl,--subsystem,windows -Wl,--enable-runtime-pseudo-reloc -Wl,--export-all-symbols" 
+set_target_properties(RoR2ModDLL PROPERTIES
+    LINK_FLAGS "-Wl,--subsystem,windows -Wl,--enable-runtime-pseudo-reloc -Wl,--export-all-symbols"
 )
 
 # Injector
