--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -4,7 +4,7 @@
         {
             "label": "CMake Configure",
             "type": "shell",
-            "command": "mkdir -p build && cd build && cmake -DCMAKE_TOOLCHAIN_FILE=../mingw-toolchain.cmake ..",
+            "command": "mkdir -p build && cd build && cmake -DCMAKE_TOOLCHAIN_FILE=../mingw-toolchain.cmake -DCMAKE_BUILD_TYPE=Debug ..",
             "problemMatcher": [],
             "group": {
                 "kind": "build",
