--- a/.gitmodules
+++ b/.gitmodules
@@ -1,6 +1,6 @@
 [submodule "minhook"]
 	path = minhook
-	url = git@github.com:TsudaKageyu/minhook.git
+	url = git@github.com:albodin/minhook.git
 [submodule "imgui"]
 	path = imgui
 	url = git@github.com:ocornut/imgui.git
