switch to plog for logging

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -89,6 +89,7 @@ include_directories(
     ${CMAKE_CURRENT_SOURCE_DIR}/src/generated
     ${IMGUI_DIR}
     ${IMGUI_DIR}/backends
+    ${CMAKE_CURRENT_SOURCE_DIR}/plog/include
 )
 
 # Find all source files
