--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -56,7 +56,7 @@ set(INCLUDE_DIR ${CMAKE_CURRENT_SOURCE_DIR}/src)
 set(HELPER_CS_PROJECT ${CMAKE_CURRENT_SOURCE_DIR}/src/helper/RoR2ModHelper.csproj)
 set(HELPER_CS_SOURCE ${CMAKE_CURRENT_SOURCE_DIR}/src/helper/RoR2ModHelper.cs)
 set(HELPER_DLL_OUTPUT ${CMAKE_BINARY_DIR}/RoR2ModHelper.dll)
-set(HELPER_HEADER_OUTPUT ${CMAKE_CURRENT_SOURCE_DIR}/src/generated/RoR2ModHelper_dll.h)
+set(HELPER_HEADER_OUTPUT ${CMAKE_CURRENT_SOURCE_DIR}/src/generated/RoR2ModHelper_dll.hpp)
 find_package(Python3 REQUIRED COMPONENTS Interpreter)
 find_program(DOTNET_EXECUTABLE dotnet REQUIRED)
 file(MAKE_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/src/generated)
